[tool.poetry]
name = "poindexter-backend"
version = "0.5.0"
description = "Poindexter backend — FastAPI + specialized AI agents. Built by Glad Labs LLC."
authors = ["Matthew M. Gladding <hello@gladlabs.io>"]
readme = "README.md"
packages = [
    { include = "cofounder_agent", from = ".." },
    { include = "poindexter", from = "." }
]

[tool.poetry.dependencies]
# Pinned to 3.13.x: litellm >=1.83.7 (which lands proxy-mode CVE
# patches GHSA-r75f-5x8p-qvmc / -xqmj-j6mv-4862 / -v4p8-mg3p-g94g)
# regressed its python upper bound to <3.14. We only run on 3.13 in
# CI + on Matt's PC anyway; widening to 3.14 was speculative and
# blocked the security bump.
python = ">=3.13,<3.14"

# Use headless opencv (doesn't require X11/GUI libraries in production)

# Web Framework
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.43,<0.48", extras = ["standard"]}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.0"

# Database
asyncpg = "^0.31"
# sqlalchemy, psycopg2-binary, sqladmin removed — admin panel unused, all DB via asyncpg
# anthropic, openai removed — zero imports, pipeline uses Ollama via httpx
# google-genai removed — only in legacy llm_client.py (dead code)

# Async/Concurrency
aiohttp = "^3.9"
httpx = "^0.28"
# tenacity owns the retry/backoff loop in services/ollama_client.py
# (see issue Glad-Labs/poindexter#200). Was already pulled in
# transitively by other deps; declared explicitly so the upper bound
# is ours to control.
tenacity = "^9.1"
# aiolimiter caps concurrent in-flight requests against the local
# Ollama server (services/ollama_client.py — issue
# Glad-Labs/poindexter#200). Limit is configurable via
# app_settings.ollama_concurrency_limit.
aiolimiter = "^1.2"

# Environment & Config
python-dotenv = "^1.0"

# Data Processing
# pandas, numpy removed — never imported in production code. Legacy memory_system.py superseded by pgvector.

# Logging & Monitoring
python-json-logger = "^2.0"
setuptools = "<81"  # Pin to avoid pkg_resources deprecation (see: setuptools#3932)
# sentry-sdk re-added 2026-04-21 — GlitchTip DSN now configured in
# app_settings.sentry_dsn, error tracking is active for the cofounder-agent
# project. [fastapi] extra wires the ASGI + Starlette middleware.
sentry-sdk = { version = "^2.18.0", extras = ["fastapi"] }

# Storage & Files
python-multipart = ">=0.0.26"
# pillow removed — never imported in production code (issue #1341)
aiofiles = "^25"

# ML/AI - Image Generation (SDXL)
# torch needs the CUDA build to drive SDXL on Matt's RTX 5090 (Blackwell,
# sm_120) — without this source pin, poetry resolves the CPU wheel from
# PyPI and SDXL crashes silently in the autocast path. See
# glad-labs-stack#334 for the full bug. cu128 wheels run fine against
# the 596.36 / CUDA 13.2 driver due to CUDA's forward-compat guarantee.
torch = { version = ">=2.7", source = "pytorch-cu128", optional = true }
transformers = { version = ">=4.40.0", optional = true }
# `accelerate` removed — zero imports in tracked code. Was optional ml extra.

# Additional Required Packages
structlog = "^25"
pyjwt = ">=2.12.0,<3.0.0"  # CVE GHSA-752w-5fwx-jx9f fix — pin to safe 2.x series
# redis removed — redis_enabled=false, in-memory TTL cache is sufficient
diffusers = { version = ">=0.36,<0.39", optional = true }
# `peft` removed — zero imports in tracked code. Was optional ml extra.

# Content Processing
markdown = "^3.5"

# Utilities
python-slugify = "^8.0"
slowapi = "^0.1.9"
starlette = ">=0.49.1"
cryptography = ">=46.0.7"  # CVEs GHSA-r6ph-v2qm-q3c2, GHSA-m959-cc7f-wv43, GHSA-p423-j2cm-9vmq
# sqladmin removed — admin panel broken (404), pgAdmin used instead
email-validator = "^2.3.0"
resend = "^2.27.0"
ddgs = "^9.0"
beautifulsoup4 = "^4.12"
edge-tts = "^7.2.8"
boto3 = "^1.42.84"
cloudinary = "^1.41"
playwright = "^1.47"
pyasn1 = ">=0.6.3"
mcp = ">=1.23.0"
pillow = ">=12.2.0"
apscheduler = "^3.11.2"
prometheus-client = "^0.25.0"
# Continuous profiling — LGTM+P stack (GH #75). Opt-in via app_settings
# enable_pyroscope; services/profiling.py configures the agent.
# sys_platform marker: pyroscope-io ships no Windows wheels (closes #224)
# — required for Matt's Windows host `poetry install --extras profiling`
# to skip cleanly instead of falling through to a Rust source build.
pyroscope-io = { version = "^0.8.5", optional = true, markers = "sys_platform != 'win32'" }
# Bumped past 1.0.10 to clear GHSA — checkpoint loading had unsafe
# msgpack deserialization in <1.0.10. langgraph 1.x is API-compatible
# with the StateGraph + END + MemorySaver surface used in
# services/writer_rag_modes/two_pass.py.
langgraph = ">=1.0.10,<2.0"
# Explicit floor — langgraph 1.x's resolver allows <5.0.0 but Poetry
# prefers the older 3.x without prodding. <4.0 has a BaseCache RCE
# (Deserialization of Untrusted Data, GHSA-via-#17). Pin to 4.x+.
langgraph-checkpoint = ">=4.0.0,<5.0"
# Postgres-backed checkpointer for TemplateRunner. Wired Phase 1.5
# (Glad-Labs/poindexter#371) — gated by the
# ``template_runner_use_postgres_checkpointer`` app_settings key
# (default false). When the flag is on, ``services/template_runner.py``
# constructs an ``AsyncPostgresSaver.from_conn_string`` per run() call
# so LangGraph state survives restarts. Bundles psycopg 3 with the
# pre-built binary wheel so Windows hosts (Matt's worker) don't need
# the libpq toolchain. v3.x is the current line; depends transitively
# on langgraph-checkpoint>=2.1.2,<5.0 which is a subset of the >=4.0
# floor we already declare above.
langgraph-checkpoint-postgres = ">=3.0.0,<4.0"
psycopg = { version = ">=3.2.0,<4.0", extras = ["binary", "pool"] }
# datasets pinned to ^3.0 to override the legacy 1.1.1 transitive dep
# pulled in by ragas — 1.1.1 calls `pyarrow.PyExtensionType` which was
# removed in pyarrow 14, breaking topic_discovery_signals at runtime
# with `module 'pyarrow' has no attribute 'PyExtensionType'`.
# datasets >=2.16 handles the new pyarrow API; 3.x is the current
# stable line. Closes Glad-Labs/poindexter#308.
datasets = "^3.0"
# LiteLLM — backs services/cost_lookup.py (model_cost table — #199),
# the LiteLLMProvider plugin (services/llm_providers/litellm_provider.py
# — #372 cutover), and the Langfuse callback wiring used at lifespan
# startup. Without this dep declared, both the cost layer and the
# Langfuse tracer silently no-op (try/except ImportError guards) — see
# the migration 0160 docstring for the gap analysis. Floor bumped to
# 1.83.7 to land the proxy-mode patches for GHSA-r75f-5x8p-qvmc
# (SQL injection in proxy auth — critical), GHSA-xqmj-j6mv-4862
# (proxy SSTI — high), GHSA-v4p8-mg3p-g94g (proxy MCP RCE — high).
# Poindexter doesn't run litellm-proxy; the bump is hygiene + closing
# the dependabot alerts that landed with the guardrails-ai dep.
litellm = ">=1.83.7,<2.0"

# Langfuse — same gap as litellm. PR #47 (Langfuse-first prompt manager)
# and PR #241 (LiteLLM→Langfuse callback) both import langfuse with
# try/except ImportError guards but the dep was never declared, so both
# integrations have been silently no-opping in production. Adding here
# so the worker image rebuild picks both up alongside litellm.
#
# Bumped 3.x → 4.x (2026-05-15). The shim's API surface (``observe`` /
# ``get_client`` / ``update_current_generation`` / ``update_current_trace``)
# is unchanged across the major; 3.x is EOL. Note: the
# ``EventSerializer`` cycle-detection bug at ``_utils/serializer.py:134/137/145``
# exists in EVERY published 3.x and 4.x version — we work around it in
# ``services/langfuse_shim.py`` via ``_install_cycle_safe_serializer_patch``.
# Remove that patch once upstream merges a fix.
langfuse = "^4.6"
deepeval = "^4.0.0"
# guardrails-ai dropped 2026-05-12 — PyPI quarantined the package after
# a suspect 0.10.1 release published that day. Our installed 0.7.3 wheel
# was clean, but the dep blocks every CI run because Poetry can't
# resolve any version while the package is quarantined. The two QA
# rails it powered (guardrails_brand, guardrails_competitor) are
# advisory-only and already covered by deepeval_brand_fabrication +
# content_validator's fabrication patterns. multi_model_qa.py wraps
# the rail call in try/except ImportError so the runtime degrades
# silently. Re-add once PyPI lifts the quarantine.
# guardrails-ai = "^0.7.3"
ragas = ">=0.2,<0.4"
langchain-ollama = "^1.1.0"
llama-index-core = "^0.14.21"
llama-index-embeddings-ollama = "^0.9.0"
prefect = "^3.7.0"

[tool.poetry.extras]
ml = ["torch", "transformers", "diffusers"]
profiling = ["pyroscope-io"]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0"
pytest-asyncio = ">=1.0,<2.0"
pytest-cov = "^4.0"
pytest-timeout = "^2.0"
pytest-xdist = "^3.0"
pytest-forked = "^1.6"
pytest-benchmark = "^4.0"

# Code Quality
black = "^26.3.1"
isort = "^5.0"
pylint = "^2.0"
ruff = "^0.15.0"
flake8 = "^6.0"
mypy = "^1.0"
bandit = "^1.7"

# Pre-commit
pre-commit = "^3.0"

# Development Tools
ipython = "^8.0"

[tool.poetry.scripts]
api = "cofounder_agent.main:app"
# Plain `poindexter <command>` CLI (no `python -m` required).
# Same entry point as python -m poindexter — routes through app.main.
poindexter = "poindexter.cli.app:main"

# Plugin discovery — setuptools entry_points groups used by
# plugins.registry.get_<type>(). Any package (core or third-party)
# that declares entry_points under these groups is discovered at
# runtime. See docs/architecture/plugin-architecture.md for the
# full design.
[tool.poetry.plugins."poindexter.taps"]
hello = "cofounder_agent.plugins.samples.hello_tap:HelloTap"
memory = "cofounder_agent.services.taps.memory:MemoryFilesTap"
posts = "cofounder_agent.services.taps.published_posts:PostsTap"
audit = "cofounder_agent.services.taps.audit:AuditTap"
brain_knowledge = "cofounder_agent.services.taps.brain_knowledge:BrainKnowledgeTap"
brain_decisions = "cofounder_agent.services.taps.brain_decisions:BrainDecisionsTap"
claude_code_sessions = "cofounder_agent.services.taps.claude_code_sessions:ClaudeCodeSessionsTap"
openclaw_sqlite = "cofounder_agent.services.taps.openclaw_sqlite:OpenClawSQLiteTap"

[tool.poetry.plugins."poindexter.probes"]
database = "cofounder_agent.plugins.samples.database_probe:DatabaseProbe"

[tool.poetry.plugins."poindexter.jobs"]
noop = "cofounder_agent.plugins.samples.noop_job:NoopJob"
sync_page_views = "cofounder_agent.services.jobs.sync_page_views:SyncPageViewsJob"
expire_stale_approvals = "cofounder_agent.services.jobs.expire_stale_approvals:ExpireStaleApprovalsJob"
db_backup = "cofounder_agent.services.jobs.db_backup:DbBackupJob"
render_prometheus_rules = "cofounder_agent.services.jobs.render_prometheus_rules:RenderPrometheusRulesJob"
postgres_vacuum = "cofounder_agent.services.jobs.postgres_vacuum:PostgresVacuumJob"
check_published_links = "cofounder_agent.services.jobs.check_published_links:CheckPublishedLinksJob"
flag_missing_seo = "cofounder_agent.services.jobs.flag_missing_seo:FlagMissingSeoJob"
detect_duplicate_posts = "cofounder_agent.services.jobs.detect_duplicate_posts:DetectDuplicatePostsJob"
audit_published_quality = "cofounder_agent.services.jobs.audit_published_quality:AuditPublishedQualityJob"
fix_broken_internal_links = "cofounder_agent.services.jobs.fix_broken_internal_links:FixBrokenInternalLinksJob"
fix_broken_external_links = "cofounder_agent.services.jobs.fix_broken_external_links:FixBrokenExternalLinksJob"
fix_uncategorized_posts = "cofounder_agent.services.jobs.fix_uncategorized_posts:FixUncategorizedPostsJob"
tune_publish_threshold = "cofounder_agent.services.jobs.tune_publish_threshold:TunePublishThresholdJob"
verify_published_posts = "cofounder_agent.services.jobs.verify_published_posts:VerifyPublishedPostsJob"
crosspost_to_devto = "cofounder_agent.services.jobs.crosspost_to_devto:CrosspostToDevtoJob"
update_utility_rates = "cofounder_agent.services.jobs.update_utility_rates:UpdateUtilityRatesJob"
auto_embed_posts = "cofounder_agent.services.jobs.auto_embed_posts:AutoEmbedPostsJob"
analyze_topic_gaps = "cofounder_agent.services.jobs.analyze_topic_gaps:AnalyzeTopicGapsJob"
sync_newsletter_subscribers = "cofounder_agent.services.jobs.sync_newsletter_subscribers:SyncNewsletterSubscribersJob"
backfill_videos = "cofounder_agent.services.jobs.backfill_videos:BackfillVideosJob"
backfill_podcasts = "cofounder_agent.services.jobs.backfill_podcasts:BackfillPodcastsJob"
run_niche_topic_sweep = "cofounder_agent.services.jobs.run_niche_topic_sweep:RunNicheTopicSweepJob"
run_dev_diary_post = "cofounder_agent.services.jobs.run_dev_diary_post:RunDevDiaryPostJob"
detect_anomalies = "cofounder_agent.services.jobs.detect_anomalies:DetectAnomaliesJob"
check_memory_staleness = "cofounder_agent.services.jobs.check_memory_staleness:CheckMemoryStalenessJob"
regenerate_stock_images = "cofounder_agent.services.jobs.regenerate_stock_images:RegenerateStockImagesJob"
collapse_old_embeddings = "cofounder_agent.services.jobs.collapse_old_embeddings:CollapseOldEmbeddingsJob"
morning_brief = "cofounder_agent.services.jobs.morning_brief:MorningBriefJob"
run_taps = "cofounder_agent.services.jobs.run_taps:RunTapsJob"
run_retention = "cofounder_agent.services.jobs.run_retention:RunRetentionJob"

[tool.poetry.plugins."poindexter.topic_sources"]
hackernews = "cofounder_agent.services.topic_sources.hackernews:HackerNewsSource"
devto = "cofounder_agent.services.topic_sources.devto:DevtoSource"
web_search = "cofounder_agent.services.topic_sources.web_search:WebSearchSource"
knowledge = "cofounder_agent.services.topic_sources.knowledge:KnowledgeSource"
codebase = "cofounder_agent.services.topic_sources.codebase:CodebaseSource"
dev_diary = "cofounder_agent.services.topic_sources.dev_diary_source:DevDiarySource"
igdb = "cofounder_agent.services.topic_sources.igdb:IGDBSource"

[tool.poetry.plugins."poindexter.image_providers"]
pexels = "cofounder_agent.services.image_providers.pexels:PexelsProvider"
sdxl = "cofounder_agent.services.image_providers.sdxl:SdxlProvider"
ai_generation = "cofounder_agent.services.image_providers.ai_generation:AIGenerationProvider"

[tool.poetry.plugins."poindexter.stages"]
verify_task = "cofounder_agent.services.stages.verify_task:VerifyTaskStage"
generate_content = "cofounder_agent.services.stages.generate_content:GenerateContentStage"
writer_self_review = "cofounder_agent.services.stages.writer_self_review:WriterSelfReviewStage"
quality_evaluation = "cofounder_agent.services.stages.quality_evaluation:QualityEvaluationStage"
url_validation = "cofounder_agent.services.stages.url_validation:UrlValidationStage"
replace_inline_images = "cofounder_agent.services.stages.replace_inline_images:ReplaceInlineImagesStage"
source_featured_image = "cofounder_agent.services.stages.source_featured_image:SourceFeaturedImageStage"
generate_seo_metadata = "cofounder_agent.services.stages.generate_seo_metadata:GenerateSeoMetadataStage"
generate_media_scripts = "cofounder_agent.services.stages.generate_media_scripts:GenerateMediaScriptsStage"
capture_training_data = "cofounder_agent.services.stages.capture_training_data:CaptureTrainingDataStage"
finalize_task = "cofounder_agent.services.stages.finalize_task:FinalizeTaskStage"
cross_model_qa = "cofounder_agent.services.stages.cross_model_qa:CrossModelQAStage"

[tool.poetry.plugins."poindexter.llm_providers"]
ollama_native = "cofounder_agent.services.llm_providers.ollama_native:OllamaNativeProvider"
openai_compat = "cofounder_agent.services.llm_providers.openai_compat:OpenAICompatProvider"
# LiteLLM-backed provider — the production default after migration 0160
# (Glad-Labs/poindexter#372). Also discoverable via plugins/registry.py
# core_samples so it's available even when entry_points haven't been
# refreshed (e.g. dev installs where `poetry install` hasn't re-run
# since this entry was added).
litellm = "cofounder_agent.services.llm_providers.litellm_provider:LiteLLMProvider"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ===== POETRY SOURCES =====
# Explicit-priority source for the CUDA-built torch wheels. Without
# this, the resolver picks up the CPU build from PyPI and SDXL silently
# breaks on hardware (glad-labs-stack#334). priority="explicit" means
# poetry only consults this index for packages that pin source =
# "pytorch-cu128"; everything else still resolves from PyPI.
[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

# ===== TOOL CONFIGURATION =====

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["cofounder_agent"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 7
max-locals = 15
max-args = 8

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]
# FastAPI routes: Depends(...) parameters intentionally hold auth/db handles
# without being referenced in the body. request: Request is often supplied
# by middleware for downstream handlers. Don't flag those.
"routes/*" = ["ARG001"]
"middleware/*" = ["ARG002"]
# main.py hosts a handful of FastAPI routes directly (legacy); same rule
# applies — Depends() params may be unused in the body.
"main.py" = ["ARG001"]
# Exception handlers (request, exc) and startup/shutdown hooks get
# framework-mandated params.
"utils/middleware_config.py" = ["ARG001"]
"utils/route_registration.py" = ["ARG001"]
# Stub/no-op broadcasters — **kwargs swallow caller args for API compat.
"services/websocket_event_broadcaster.py" = ["ARG001", "ARG004"]
"services/progress_broadcaster.py" = ["ARG001"]
"services/websocket_manager.py" = ["ARG002"]
# Mock crewai_tools shim — matches third-party library signatures even
# though we only ever log a warning.
"agents/content_agent/utils/crewai_tools_mock.py" = ["ARG002"]
# Namespace-package sys.path fixes must run before imports.
"agents/content_agent/services/llm_client.py" = ["E402"]
"agents/content_agent/services/pexels_client.py" = ["E402"]
"agents/content_agent/config.py" = ["E402"]
# Social adapters share a Protocol signature — not every adapter needs
# every kwarg.
"services/social_adapters/*" = ["ARG001", "ARG002"]
# Quality scorers all share a (content, context, cfg) signature for
# uniform dispatch, even when individual scorers don't read all three.
"services/quality_scorers.py" = ["ARG001"]
# Pipeline Stage Protocol: execute(context, config). Most stages read
# from context and don't need config — the arg is part of the contract
# so every stage can be dispatched uniformly.
"services/stages/*" = ["ARG002"]
# Job Protocol: run(pool, config). Subprocess jobs (db_backup,
# auto_embed_posts) don't need the pool — they shell out to a CLI
# that reads DATABASE_URL itself.
"services/jobs/*" = ["ARG002"]
# Plugin sample implementations are Protocol-contract reference stubs.
# The whole point is to show the minimum shape, not to use every arg.
"plugins/samples/*" = ["ARG002"]
# Phase executors share the Phase Protocol signature even when a given
# phase doesn't need the config kwarg.
"services/phases/*" = ["ARG002"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# pytest-asyncio >=0.24 warns when this isn't set explicitly. "function"
# matches the existing per-test-function isolation we already get; making
# it explicit silences the PytestDeprecationWarning.
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["../..", ".", "../"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "integration_db: integration tests that require a live Postgres (GH#21 harness)",
    "api: api tests",
    "e2e: end-to-end tests",
    "performance: performance tests",
    "slow: slow tests",
    "voice: voice interface tests",
    "websocket: websocket tests",
    "benchmark: benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["cofounder_agent"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
assert_used = { skips = ["*/tests/*"] }
